--- a/src/pages/components/tooltip/code.mdx
+++ b/src/pages/components/tooltip/code.mdx
@@ -8,7 +8,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 import { Filter } from '@carbon/react/icons';
 import { Information } from '@carbon/react/icons';
-import { tooltipTrigger } from '../../../styles/tooltip.scss';
+import { tooltipTrigger } from '../../../styles/Tooltip.module.scss';
 
 <PageDescription>
 
@@ -100,7 +100,7 @@ documentation, see the Storybooks for each framework below.
       tabIndex={0}
       triggerText="Tooltip label"
     >
-      <button className={ tooltipTrigger } type="button">
+      <button className={tooltipTrigger} type="button">
         <Information />
       </button>
     </Tooltip>
