--- a/src/pages/components/tabs/code.mdx
+++ b/src/pages/components/tabs/code.mdx
@@ -5,6 +5,14 @@ description:
 tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 ---
 
+import {
+  Tabs,
+  unstable_TabList as TabList,
+  Tab,
+  unstable_TabPanels as TabPanels,
+  unstable_TabPanel as TabPanel,
+} from '@carbon/react';
+
 <PageDescription>
 
 Preview the tabs component with the React live demo. For detailed code usage
@@ -59,6 +67,8 @@ documentation, see the Storybooks for each framework below.
 
 ## Live demo
 
+<!-- knobs={{ Tabs: ['type'], Tab: ['disabled', 'selected'] }} -->
+
 <ComponentDemo
   components={[
     {
@@ -66,10 +76,20 @@ documentation, see the Storybooks for each framework below.
       label: 'Tabs',
     },
   ]}
+  scope={{
+    Tabs,
+    TabList,
+    Tab,
+    TabPanels,
+    TabPanel,
+  }}
 >
   <ComponentVariant
     id="tabs"
-    knobs={{ Tabs: ['type'], Tab: ['disabled', 'selected'] }}
+    knobs={{
+      TabList: ['activation', 'contained'],
+      Tab: ['disabled'],
+    }}
     links={{
       React:
         'https://react.carbondesignsystem.com/?path=/story/components-tabs--default',
@@ -81,13 +101,13 @@ documentation, see the Storybooks for each framework below.
         'https://web-components.carbondesignsystem.com/?path=/story/components-tabs--default',
     }}
   >{`
-<div style={{ width: '50%' }}>
+<div style={{ width: '75%' }}>
   <Tabs>
-    <TabList aria-label="List of tabs" contained {...args}>
+    <TabList aria-label="List of tabs">
       <Tab>Tab Label 1</Tab>
       <Tab>Tab Label 2</Tab>
-      <Tab disabled>Tab Label 3</Tab>
-      <Tab title="Tab Label 4 with a very long long title">
+      <Tab>Tab Label 3</Tab>
+      <Tab>
           Tab Label 4 with a very long long title
       </Tab>
       <Tab>Tab Label 5</Tab>
