--- a/src/pages/migrating/guide/design.mdx
+++ b/src/pages/migrating/guide/design.mdx
@@ -17,7 +17,10 @@ theming, and introduces beta kits to experiment with.
 <AnchorLinks>
   <AnchorLink>Design kit</AnchorLink>
   <AnchorLink>Components</AnchorLink>
-  <AnchorLink>Elements</AnchorLink>
+  <AnchorLink>Sizing</AnchorLink>
+  <AnchorLink>Type tokens</AnchorLink>
+  <AnchorLink>Color tokens</AnchorLink>
+  <AnchorLink>Theming</AnchorLink>
 </AnchorLinks>
 
 ## Design kit
@@ -73,7 +76,7 @@ Beta kit is available in the White and Gray 100 themes.
 
 ## Components
 
-### Notifications
+### Notifications <Tag type="cyan">Breaking</Tag>
 
 Toast notifications have been refactored to now allow interactive content in
 them, like links and buttons. To support the usecase of having a toast with or
@@ -81,8 +84,8 @@ without interactive content, we have introduced two types of toast
 notifications—polite and assertive.
 
 See Carbon's
-[toast notification](https://v11.carbondesignsystem.com/components/notification/usage/#toast-notifications)
-usage guidance for more information.
+[toast notification](/components/notification/usage/#toast-notifications) usage
+guidance for more information.
 
 <Row>
 <Column colLg={8}>
@@ -92,16 +95,15 @@ usage guidance for more information.
 </Column>
 </Row>
 
-### Popover
+### Popover <Tag type="green">New</Tag>
 
 Popover is a new component we have added to our system. A popover is a layer
 that appears above all other content on the page and is used to display
 additional details for specific elements whether it be text or interactive
 elements.
 
-See Carbon's
-[popover](https://v11.carbondesignsystem.com/components/popover/usage/) usage
-guidance for more information.
+See Carbon's [popover](components/popover/usage/) usage guidance for more
+information.
 
 <Row>
 <Column colLg={8}>
@@ -111,14 +113,13 @@ guidance for more information.
 </Column>
 </Row>
 
-### Tooltip
+### Tooltip <Tag type="cyan">Breaking</Tag>
 
 The tooltip component has been refactored to use the popover component under the
 hood to improve accessibility.
 
-See Carbon's
-[tooltip](https://v11.carbondesignsystem.com/components/tooltip/usage/) usage
-guidance for more information.
+See Carbon's [tooltip](/components/tooltip/usage/) usage guidance for more
+information.
 
 <Row>
 <Column colLg={8}>
@@ -128,7 +129,7 @@ guidance for more information.
 </Column>
 </Row>
 
-### Toggletip
+### Toggletip <Tag type="green">New</Tag>
 
 Definition and interactive tootips now use the toggletip component to achieve
 accessibility standards. Toggletip uses the disclosure pattern to toggle the
@@ -136,7 +137,10 @@ visibility of a popover. This popover may contain a variety of information, from
 descriptive text to interactive elements. Further guidance on the toggletip
 component is coming soon.
 
-### Tabs
+See Carbon's [Toggletip](/components/toggletip/usage/) usage guidance for more
+information.
+
+### Tabs <Tag type="cyan">Breaking</Tag>
 
 The tab component variant names are changing. Default tabs will become _Line
 tabs_ and Container tabs will become _Contained tabs_. There are three new
@@ -144,8 +148,7 @@ modifiers—tabs with icons, icon-only tabs, and secondary labels. Additionally,
 there is a new third alignment option for tab that allows for auto-widths where
 each tab size is determined by the label length.
 
-See Carbon's [tab](https://v11.carbondesignsystem.com/components/tabs/usage/)
-usage guidance for more information.
+See Carbon's [tab](/components/tabs/usage/) usage guidance for more information.
 
 <Row>
 <Column colLg={8}>
@@ -155,7 +158,7 @@ usage guidance for more information.
 </Column>
 </Row>
 
-### UI shell
+### UI shell <Tag type="purple">Updated</Tag>
 
 The UI shell is now themeable and has been updated to use inline theming. The UI
 shell uses Carbon theme tokens instead of component specific tokens and the
@@ -169,9 +172,7 @@ color will follow each themes styles.
 </Column>
 </Row>
 
-## Elements
-
-### Sizing
+## Sizing
 
 All size properties for components have been renamed to be more consistent with
 the pixel/rem value that it is paired with.
@@ -185,13 +186,68 @@ the pixel/rem value that it is paired with.
 | Extra large (xl)         | 64 / 4            |
 | Double extra large (2xl) | 80 / 5            |
 
-### Color tokens
+## Type tokens
+
+The two v10 type sets–Productive and Expressive–have been blended together to
+work as a unified collection in v11. As a result of this convergence, type
+tokens name have been renamed to better define their relationship to one another
+and reflect its styling. For more information on the evolution of productive and
+express, see Type strategies.
+
+#### Compact styles
+
+Some token now have a compact designation, meaning the only difference it has
+with the token of a similar name is a variation in line height.
+
+#### Body styles
+
+The four body styles stay the same but their names have been updated. The `long`
+styles are not simply just `body`, while the `short` styles are now
+`body-compact`.
+
+For example
+
+- `$body-long-01` → `$body-01`
+- `$body-short-02` → `$body-compact-02`
+
+#### Heading styles
+
+`Product` and `Expressive` while still a concept used to express different
+“moments” are no longer used in the type token header names. There are two new
+classifications–Fixed and Fluid.
+
+**Fixed headings**, for the most part take the place of what were the v10
+productive headings. The first two v10 expressive headings are also now included
+in the fixed type set. They are called “fixed” because they do not change sizes
+across breakpoints and always remain a single fixed size. However, the term
+fixed is not included in the token name but simply named `heading`.
+
+- `$productive-heading-03` → `$heading-03`
+
+**Fluid headings** take the place of the v10 expressive heading. These headings
+are responsive and the type styles change size at different breakpoints.
+
+- `$expressive-heading-05` → `$fluid-heading-05`
+
+### Resources
+
+<Row className="resource-card-group">
+  <Column colLg={4} colMd={4} noGutterSm>
+    <ResourceCard
+      subTitle="Type token migration table"
+      href="https://github.com/carbon-design-system/carbon/blob/main/docs/migration/v11.md#type-tokens">
+      <MdxIcon name="github" />
+    </ResourceCard>
+  </Column>
+</Row>
+
+## Color tokens
 
 Existing color tokens have been renamed to better reflect their usage. In
 addition to renaming existing tokens, new tokens have been added to fill
 existing color token gaps in our system and to fix complex layering logic.
 
-#### Color token names
+### Color token names
 
 Previously, in v10 many color tokens had numeral endings, now in v11 only
 layering tokens will have this distinction. All other tokens have been given an
@@ -199,14 +255,18 @@ adjective descriptor in place of the number ending to help with better
 understanding how a token should be used.
 
 <Row>
-<Column colLg={8}>
+<Column colLg={12}>
 
-![Example of the new token names with the layer model tokens highlighted in purple.](images/color-implementation-layer-set-3.png)
+![Example showing the v10 tokens compared to the v11 tokens](images/migrate-design-color-tokens.png)
 
 </Column>
 </Row>
 
-#### Layer model tokens
+<Caption>
+  Examples showing v10 tokens on the left and v11 tokens on the right
+</Caption>
+
+### Layer model tokens
 
 We have introduced two different types of color token for the layering
 models—Layering tokens and Contextual layer tokens. The two type of tokens will
@@ -215,24 +275,38 @@ and largely a developer concern. **In Sketch, and other design tools, designer
 will only be using the Layering tokens to design.** The layering tokens replace
 what were the `ui` color tokens in v10 and are used in a similar way.
 
-<Row>
-<Column colMd={6} colLg={6}>
-
-![Example of layering token (left) versus contextual layering tokens (right).](images/color-implementation-compare-1.png)
-
-</Column>
-<Column colMd={6} colLg={6}>
-
-![Example of layering token (left) versus contextual layering tokens (right).](images/color-implementation-compare-2.png)
-
-</Column>
-</Row>
-
 See Carbon's
 [color overview](https://v11.carbondesignsystem.com/guidelines/color/overview/)
 guidance and
 [migrating color tokens](https://github.com/carbon-design-system/carbon/blob/main/docs/migration/11.x-color.md)
 for more information.
+
+<Row>
+<Column colLg={12}>
+
+![Example showing layering and contextual tokens](images/color-implementation-compare.png)
+
+</Column>
+</Row>
+
+<Caption>
+  Examples showing layering tokens on the left and contextual tokens on the
+  right
+</Caption>
+
+### Resources
+
+<Row className="resource-card-group">
+  <Column colLg={4} colMd={4} noGutterSm>
+    <ResourceCard
+      subTitle="Color token migration table"
+      href="https://github.com/carbon-design-system/carbon/blob/main/docs/migration/v11.md#design-tokens">
+      <MdxIcon name="github" />
+    </ResourceCard>
+  </Column>
+</Row>
+
+## Theming
 
 ### Inline theming
 
@@ -242,8 +316,7 @@ allows themes to be nested within each other without needing custom styles or
 overrides. In product, a common use-case for inline theming is applying a
 contrasting theme to a UI shell and side panels.
 
-See Carbon's
-[inline theming](https://v11.carbondesignsystem.com/guidelines/color/implementation#inline-theming)
+See Carbon's [inline theming](/guidelines/color/implementation#inline-theming)
 guidance for more information.
 
 <Row>
@@ -262,7 +335,7 @@ The UI will automatically switch from using light color backgrounds with dark
 color text to using dark color backgrounds with light color text.
 
 See Carbon's
-[light or dark mode](https://v11.carbondesignsystem.com/guidelines/color/implementation#light-or-dark-mode)
+[light or dark mode](/guidelines/color/implementation#light-or-dark-mode)
 guidance for more information.
 
 <Row>
