docs(Tooltip): update usage/code component preview

--- a/src/pages/components/tooltip/usage.mdx
+++ b/src/pages/components/tooltip/usage.mdx
@@ -146,6 +146,7 @@ The exception here is that definition tooltip can be invoked on `hover` or
 ## Live demo
 
 import { Filter16 } from '@carbon/icons-react';
+import { Information } from '@carbon/react/icons';
 
 <ComponentDemo
   components={[
@@ -162,7 +163,7 @@ import { Filter16 } from '@carbon/icons-react';
       label: 'Definition tooltip',
     },
   ]}
-  scope={{ Filter16 }}
+  scope={{ Filter16, Information }}
 >
   <ComponentVariant
     id="tooltip"
@@ -178,26 +179,18 @@ import { Filter16 } from '@carbon/icons-react';
     }}
   >{`
     <Tooltip
-      direction="bottom"
+      align="bottom"
+      label="This is some tooltip text. This box shows the maximum amount of text that should be displayed inside. If more room is needed, use a modal instead."
       tabIndex={0}
       triggerText="Tooltip label"
     >
-      <p>
-        This is some tooltip text. This box shows the maximum amount of text that should be displayed inside. If more room is needed, use a modal instead.
-      </p>
-      <div className="cds--tooltip__footer">
-        <Link href="#">Learn more</Link>
-        <Button size="small">
-          Create
-        </Button>
-      </div>
+      <button className="tooltip-trigger" type="button">
+        <Information />
+      </button>
     </Tooltip>
   `}</ComponentVariant>
   <ComponentVariant
     id="icon-tooltip"
-    knobs={{
-      TooltipIcon: ['direction', 'align'],
-    }}
     links={{
       React:
         'https://react.carbondesignsystem.com/?path=/story/components-tooltipicon--default',
@@ -210,10 +203,9 @@ import { Filter16 } from '@carbon/icons-react';
     }}
   >{`
     <TooltipIcon
-      tooltipText="Filter"
-    >
-      <Filter16/>
-    </TooltipIcon>
+      tooltipText="Interactive tooltip"
+      renderIcon={Information}
+    />
   `}</ComponentVariant>
   <ComponentVariant
     id="definition-tooltip"
@@ -231,11 +223,11 @@ import { Filter16 } from '@carbon/icons-react';
         'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--definition',
     }}
   >{`
-    <TooltipDefinition
-      tooltipText="Brief description of the dotted, underlined word above."
+    <DefinitionTooltip
+      definition="Brief description of the dotted, underlined word above."
     >
       Definition Tooltip
-    </TooltipDefinition>
+    </DefinitionTooltip>
   `}</ComponentVariant>
 </ComponentDemo>
 
