--- a/src/pages/components/tooltip/code.mdx
+++ b/src/pages/components/tooltip/code.mdx
@@ -8,7 +8,6 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 import { Filter } from '@carbon/react/icons';
 import { Information } from '@carbon/react/icons';
-import { tooltipTrigger } from '../../../styles/Tooltip.module.scss';
 
 <PageDescription>
 
@@ -100,16 +99,13 @@ documentation, see the Storybooks for each framework below.
       tabIndex={0}
       triggerText="Tooltip label"
     >
-      <button className={tooltipTrigger} type="button">
+      <button className="tooltip-trigger" type="button">
         <Information />
       </button>
     </Tooltip>
   `}</ComponentVariant>
   <ComponentVariant
     id="icon-tooltip"
-    knobs={{
-      TooltipIcon: ['direction', 'align'],
-    }}
     links={{
       React:
         'https://react.carbondesignsystem.com/?path=/story/components-tooltipicon--default',
@@ -122,10 +118,9 @@ documentation, see the Storybooks for each framework below.
     }}
   >{`
     <TooltipIcon
-      tooltipText="Filter"
-    >
-      <Filter/>
-    </TooltipIcon>
+      tooltipText="Interactive tooltip"
+      renderIcon={Information}
+    />
   `}</ComponentVariant>
   <ComponentVariant
     id="definition-tooltip"
