update capitalization and typos
updated capitalization and typos

--- a/src/pages/components/notification/usage.mdx
+++ b/src/pages/components/notification/usage.mdx
@@ -150,7 +150,7 @@ apprised of the situation, and know what to do next.
 
 ### Main elements
 
-#### Title (Inline and toast only)
+#### Title (inline and toast only)
 
 - The title should be short and descriptive, explaining the most important piece
   of information.
@@ -317,8 +317,6 @@ act on past notifications.
 Actionable notifications do not allow for rich text like titles and captions.
 Keep content concise and clearly indicate the action the user can take. Limit
 action labels to two words or less.
-
-#### Action
 
 **Inline**
 
