--- a/src/pages/components/notification/usage.mdx
+++ b/src/pages/components/notification/usage.mdx
@@ -318,16 +318,20 @@ Actionable notifications do not allow for rich text like titles and captions.
 Keep content concise and clearly indicate the action the user can take. Limit
 action labels to two words or less.
 
-**Inline** Actionable inline notifications have a ghost button action that is
-adjacent to the title and body content. On mobile screens the action button
-wraps under the body content. This button should allow users to take further
-action on the notification.
+#### Inline
 
-**Toast** Actionable toast notifications can include a button at the end of
-their body content. This button should be short and navigate users to a page or
-modal where they can take action to address the notification or find further
-information. Because toast notifications automatically dismiss, it is important
-that there are alternative routes to navigate to the link destination.
+Actionable inline notifications have a ghost button action that is adjacent to
+the title and body content. On mobile screens the action button wraps under the
+body content. This button should allow users to take further action on the
+notification.
+
+#### Toast
+
+Actionable toast notifications can include a button at the end of their body
+content. This button should be short and navigate users to a page or modal where
+they can take action to address the notification or find further information.
+Because toast notifications automatically dismiss, it is important that there
+are alternative routes to navigate to the link destination.
 
 <Row>
 <Column colLg={8}>
