--- a/src/pages/migrating/guide/design.mdx
+++ b/src/pages/migrating/guide/design.mdx
@@ -7,6 +7,8 @@ description:
 tabs: ['Overview', 'Design', 'Develop']
 ---
 
+import { Tag } from '@carbon/react';
+
 <PageDescription>
 
 The transition from v10 to v11 includes updates and additions to color tokens,
@@ -36,43 +38,6 @@ theming, and introduces beta kits to experiment with.
 - Updated layer styles with new color tokens
 - Updated text styles with new color tokens
 - Removal of light variants (in favor of new layer and contextual token sets)
-
-### v11 Beta kit
-
-Try out the v11 Beta Sketch kit that has been updated to reflect our color token
-name changes and additional token layer sets and contextual layer sets. The v11
-Beta kit is available in the White and Gray 100 themes.
-
-<InlineNotification>
-  Note: The v11 Beta kit is temporary and only available during our beta release
-  timeframe. The existing v10 kits will be updated with these changes and
-  additions once v11 is released to the general public.
-</InlineNotification>
-
-<Row className="resource-card-group">
-<Column colLg={4} colMd={4} noGutterSm>
-<ResourceCard
-    subTitle="White theme (Beta)"
-    href="sketch://add-library/cloud/fabc8814-ead2-4eeb-a893-ef3b6ea88875"
-    actionIcon="download"
-    >
-
-<MdxIcon name="sketch" />
-
-</ResourceCard>
-</Column>
-<Column colLg={4} colMd={4} noGutterSm>
-<ResourceCard
-    subTitle="Gray 100 theme (Beta)"
-    actionIcon="download"
-    href="sketch://add-library/cloud/9b33e49d-9b79-4696-9f57-c7a15c1e276a"
-    >
-      
-<MdxIcon name="sketch" />
-
-</ResourceCard>
-</Column>
-</Row>
 
 ## Components
 
@@ -194,12 +159,12 @@ tokens name have been renamed to better define their relationship to one another
 and reflect its styling. For more information on the evolution of productive and
 express, see Type strategies.
 
-#### Compact styles
+### Compact styles
 
 Some token now have a compact designation, meaning the only difference it has
 with the token of a similar name is a variation in line height.
 
-#### Body styles
+### Body styles
 
 The four body styles stay the same but their names have been updated. The `long`
 styles are not simply just `body`, while the `short` styles are now
@@ -210,7 +175,7 @@ For example
 - `$body-long-01` → `$body-01`
 - `$body-short-02` → `$body-compact-02`
 
-#### Heading styles
+### Heading styles
 
 `Product` and `Expressive` while still a concept used to express different
 “moments” are no longer used in the type token header names. There are two new
