--- a/src/pages/migrating/guide/design.mdx
+++ b/src/pages/migrating/guide/design.mdx
@@ -67,7 +67,7 @@ that appears above all other content on the page and is used to display
 additional details for specific elements whether it be text or interactive
 elements.
 
-See Carbon's [popover](components/popover/usage/) usage guidance for more
+See Carbon's [popover](/components/popover/usage/) usage guidance for more
 information.
 
 <Row>
@@ -170,27 +170,29 @@ The four body styles stay the same but their names have been updated. The `long`
 styles are not simply just `body`, while the `short` styles are now
 `body-compact`.
 
-For example
-
 - `$body-long-01` → `$body-01`
 - `$body-short-02` → `$body-compact-02`
 
 ### Heading styles
 
-`Product` and `Expressive` while still a concept used to express different
+Productive and expressive while still a concept used to express different
 “moments” are no longer used in the type token header names. There are two new
 classifications–Fixed and Fluid.
 
-**Fixed headings**, for the most part take the place of what were the v10
-productive headings. The first two v10 expressive headings are also now included
-in the fixed type set. They are called “fixed” because they do not change sizes
-across breakpoints and always remain a single fixed size. However, the term
-fixed is not included in the token name but simply named `heading`.
+#### Fixed headings
+
+Fixed headings, for the most part take the place of what were the v10 productive
+headings. The first two v10 expressive headings are also now included in the
+fixed type set. They are called “fixed” because they do not change sizes across
+breakpoints and always remain a single fixed size. However, the term fixed is
+not included in the token name but simply named `heading`.
 
 - `$productive-heading-03` → `$heading-03`
 
-**Fluid headings** take the place of the v10 expressive heading. These headings
-are responsive and the type styles change size at different breakpoints.
+#### Fluid headings
+
+Fluid headings take the place of the v10 expressive heading. These headings are
+responsive and the type styles change size at different breakpoints.
 
 - `$expressive-heading-05` → `$fluid-heading-05`
 
@@ -209,15 +211,17 @@ are responsive and the type styles change size at different breakpoints.
 ## Color tokens
 
 Existing color tokens have been renamed to better reflect their usage. In
-addition to renaming existing tokens, new tokens have been added to fill
-existing color token gaps in our system and to fix complex layering logic.
+addition to renaming existing tokens, new tokens have been added to fill gaps in
+the color token system and fix complex layering logic.
 
 ### Color token names
 
 Previously, in v10 many color tokens had numeral endings, now in v11 only
 layering tokens will have this distinction. All other tokens have been given an
-adjective descriptor in place of the number ending to help with better
-understanding how a token should be used.
+adjective descriptor in place of the number ending to help users better
+understand how a token should be used. The new naming convention is as follows:
+
+`[element] - [role] - [order] - [state]`
 
 <Row>
 <Column colLg={12}>
@@ -233,12 +237,12 @@ understanding how a token should be used.
 
 ### Layer model tokens
 
-We have introduced two different types of color token for the layering
-models—Layering tokens and Contextual layer tokens. The two type of tokens will
-produce the same visual effect. The difference between them is a technical one
-and largely a developer concern. **In Sketch, and other design tools, designer
-will only be using the Layering tokens to design.** The layering tokens replace
-what were the `ui` color tokens in v10 and are used in a similar way.
+We have introduced two new types of color token for the layering models—Layering
+tokens and Contextual layer tokens. The two types of tokens will produce the
+same visual effect. The difference between them is a technical one and largely a
+developer concern. **In Sketch, and other design tools, designer will only use
+the layering tokens to design.** The layering tokens replace what were the `ui`
+color tokens in v10 and are used in a similar way.
 
 See Carbon's
 [color overview](https://v11.carbondesignsystem.com/guidelines/color/overview/)
