--- a/src/pages/migrating/guide/design.mdx
+++ b/src/pages/migrating/guide/design.mdx
@@ -137,7 +137,7 @@ color will follow each themes styles.
 </Column>
 </Row>
 
-## Sizing
+## Sizing <Tag type="cyan">Breaking</Tag>
 
 All size properties for components have been renamed to be more consistent with
 the pixel/rem value that it is paired with.
@@ -151,7 +151,7 @@ the pixel/rem value that it is paired with.
 | Extra large (xl)         | 64 / 4            |
 | Double extra large (2xl) | 80 / 5            |
 
-## Type tokens
+## Type tokens <Tag type="cyan">Breaking</Tag>
 
 The two v10 type sets–Productive and Expressive–have been blended together to
 work as a unified collection in v11. As a result of this convergence, type
@@ -167,7 +167,7 @@ with the token of a similar name is a variation in line height.
 ### Body styles
 
 The four body styles stay the same but their names have been updated. The `long`
-styles are not simply just `body`, while the `short` styles are now
+styles are now simply just `body`, while the `short` styles are now
 `body-compact`.
 
 - `$body-long-01` → `$body-01`
@@ -208,7 +208,7 @@ responsive and the type styles change size at different breakpoints.
   </Column>
 </Row>
 
-## Color tokens
+## Color tokens <Tag type="cyan">Breaking</Tag>
 
 Existing color tokens have been renamed to better reflect their usage. In
 addition to renaming existing tokens, new tokens have been added to fill gaps in
@@ -235,7 +235,7 @@ understand how a token should be used. The new naming convention is as follows:
   Examples showing v10 tokens on the left and v11 tokens on the right
 </Caption>
 
-### Layer model tokens
+### Layer model tokens <Tag type="green">New</Tag>
 
 We have introduced two new types of color token for the layering models—Layering
 tokens and Contextual layer tokens. The two types of tokens will produce the
