--- a/src/pages/designing/kits/sketch.mdx
+++ b/src/pages/designing/kits/sketch.mdx
@@ -345,7 +345,7 @@ previous version.
 ### Migration
 
 The Sketch libraries work on a continous migration stategy. The v11 updates were
-made in the same libraries that were used in v10. If you're Carbon Sketch
+made in the same libraries that were used in v10. If your Carbon Sketch
 Libraries are up to date then they are using v11. If you do not wish to use v11
 yet then do not accept the library update pushed on 31 March 2022.
 
