Apply suggestions from design review
Co-authored-by: Lauren Rice <43969356+laurenmrice@users.noreply.github.com>

--- a/src/pages/migrating/guide/design.mdx
+++ b/src/pages/migrating/guide/design.mdx
@@ -30,14 +30,14 @@ theming, size naming, and new components.
 
 - Updated existing color token names to better reflect their usage
 - Updated layer styles with new color tokens
-- Updated text styles with new tokens names
+- Updated text styles with new token names
 - Removal of `light` variants (in favor of new layer and contextual token sets)
 
 ### Kit migration
 
 | Design tool                          | V11              | Migration strategy                                                                                                                                                         |
 | ------------------------------------ | ---------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [Sketch](/designing/kits/sketch)     | Update available | The same Sketch Cloud libraries that were used in v10 have been updated to include the v11 changes. Do not accept the library updated until you are ready to work in v11.  |
+| [Sketch](/designing/kits/sketch)     | Update available | The same Sketch Cloud libraries that were used in v10 have been updated to include the v11 changes. Do not accept the library update until you are ready to work in v11.  |
 | [Figma](/designing/kits/figma)       | TBD              | TBD                                                                                                                                                                        |
 | [Adobe XD](/designing/kits/adobe-xd) | TBD              | TBD                                                                                                                                                                        |
 
