--- a/src/pages/migrating/guide/design.mdx
+++ b/src/pages/migrating/guide/design.mdx
@@ -35,50 +35,11 @@ theming, size naming, and new components.
 
 ### Kit migration
 
-| Design tool                          | V11              | Migration strategy                                                                                                                                                         |
-| ------------------------------------ | ---------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [Sketch](/designing/kits/sketch)     | Update available | The same Sketch Cloud libraries that were used in v10 have been updated to include the v11 changes. Do not accept the library update until you are ready to work in v11.  |
-| [Figma](/designing/kits/figma)       | TBD              | TBD                                                                                                                                                                        |
-| [Adobe XD](/designing/kits/adobe-xd) | TBD              | TBD                                                                                                                                                                        |
-
-<!---
-### v11 Beta kit
-
-Try out the v11 Beta Sketch kit that has been updated to reflect our color token
-name changes and additional token layer sets and contextual layer sets. The v11
-Beta kit is available in the White and Gray 100 themes.
-
-<InlineNotification>
-  Note: The v11 Beta kit is temporary and only available during our beta release
-  timeframe. The existing v10 kits will be updated with these changes and
-  additions once v11 is released to the general public.
-</InlineNotification>
-
-<Row className="resource-card-group">
-<Column colLg={4} colMd={4} noGutterSm>
-<ResourceCard
-    subTitle="White theme (Beta)"
-    href="sketch://add-library/cloud/fabc8814-ead2-4eeb-a893-ef3b6ea88875"
-    actionIcon="download"
-    >
-
-<MdxIcon name="sketch" />
-
-</ResourceCard>
-</Column>
-<Column colLg={4} colMd={4} noGutterSm>
-<ResourceCard
-    subTitle="Gray 100 theme (Beta)"
-    actionIcon="download"
-    href="sketch://add-library/cloud/9b33e49d-9b79-4696-9f57-c7a15c1e276a"
-    >
-      
-<MdxIcon name="sketch" />
-
-</ResourceCard>
-</Column>
-</Row>
---->
+| Design tool                          | V11                                  | Migration strategy                                                                                                                                                        |
+| ------------------------------------ | ------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [Sketch](/designing/kits/sketch)     | Update available                     | The same Sketch Cloud libraries that were used in v10 have been updated to include the v11 changes. Do not accept the library update until you are ready to work in v11.  |
+| [Figma](/designing/kits/figma)       | Expected release by the end of April | The same Figma libraries that were used in v10 will be updated to include the v11 changes. Do not accept the library update until you are ready to work in v11.           |
+| [Adobe XD](/designing/kits/adobe-xd) | Partial update available             | Some of the v11 changes have been made in the XD files. It is yet to be determined when all the other changes will be added.                                              |
 
 ## Components
 
