--- a/src/pages/components/tooltip/usage.mdx
+++ b/src/pages/components/tooltip/usage.mdx
@@ -14,6 +14,13 @@ extra ability to communicate and give clarity to a user.
 
 </PageDescription>
 
+<InlineNotification>
+
+**V11 update** The tooltip component has been refactored to use the popover
+component under the hood to improve accessibility.
+
+</InlineNotification>
+
 <AnchorLinks>
 
 <AnchorLink>Overview</AnchorLink>
@@ -162,8 +169,7 @@ import { Filter16 } from '@carbon/icons-react';
       label: 'Definition tooltip',
     },
   ]}
-  scope={{ Filter16 }}
->
+  scope={{ Filter16 }}>
   <ComponentVariant
     id="tooltip"
     links={{
@@ -175,8 +181,7 @@ import { Filter16 } from '@carbon/icons-react';
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tooltip',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--default',
-    }}
-  >{`
+    }}>{`
     <Tooltip
       direction="bottom"
       tabIndex={0}
@@ -207,8 +212,7 @@ import { Filter16 } from '@carbon/icons-react';
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tooltip',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--icon',
-    }}
-  >{`
+    }}>{`
     <TooltipIcon
       tooltipText="Filter"
     >
@@ -229,8 +233,7 @@ import { Filter16 } from '@carbon/icons-react';
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tooltip',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--definition',
-    }}
-  >{`
+    }}>{`
     <TooltipDefinition
       tooltipText="Brief description of the dotted, underlined word above."
     >
