--- a/src/pages/migrating/guide/design.mdx
+++ b/src/pages/migrating/guide/design.mdx
@@ -160,15 +160,15 @@ the pixel/rem value that it is paired with.
 
 ## Type tokens <Tag type="cyan">Breaking</Tag>
 
-The two v10 type sets–Productive and Expressive–have been blended together to
+The two v10 type sets—Productive and Expressive—have been blended together to
 work as a unified collection in v11. As a result of this convergence, type
 tokens name have been renamed to better define their relationship to one another
 and reflect its styling. For more information on the evolution of productive and
-express, see Type strategies.
+express, see the [Typography page](/guidelines/typography/styling-strategies).
 
 ### Compact styles
 
-Some token now have a compact designation, meaning the only difference it has
+Some tokens now have a compact designation, meaning the only difference it has
 with the token of a similar name is a variation in line height.
 
 ### Body styles
@@ -184,7 +184,7 @@ styles are now simply just `body`, while the `short` styles are now
 
 Productive and expressive while still a concept used to express different
 “moments” are no longer used in the type token header names. There are two new
-classifications–Fixed and Fluid.
+classifications—Fixed and Fluid.
 
 #### Fixed headings
 
