--- a/src/pages/components/tooltip/usage.mdx
+++ b/src/pages/components/tooltip/usage.mdx
@@ -16,8 +16,9 @@ extra ability to communicate and give clarity to a user.
 
 <InlineNotification>
 
-**V11 update** The tooltip component has been refactored to use the popover
-component under the hood to improve accessibility.
+**V11 update:** The tooltip component has been refactored to use the
+[popover](/components/popover/usage/) component under the hood to improve
+accessibility.
 
 </InlineNotification>
 
