fix(homepage): reconfigure components to not use dark variants

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -3,7 +3,6 @@ import HomepageTemplate from 'gatsby-theme-carbon/src/templates/Homepage';
 export default HomepageTemplate;
 
 <FeatureCard
-    color="dark"
     href="/designing/get-started"
     subTitle="Start"
     title="Designing"
@@ -24,7 +23,6 @@ export default HomepageTemplate;
 </FeatureCard>
 
 <FeatureCard
-    color="dark"
     href="/developing/get-started"
     subTitle="Start"
     title="Developing"
@@ -52,7 +50,6 @@ building websites and user interfaces.
 <Row className="resource-card-group">
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
-    color="dark"
     subTitle="Sketch kits"
     href="/designing/kits/sketch"
     >
@@ -61,69 +58,63 @@ building websites and user interfaces.
 </Column>
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
-    color="dark"
     subTitle="Carbon React components"
     href="https://github.com/carbon-design-system/carbon/tree/main/packages/react"
     >
 
-<MdxIcon name="github" color="inverse" />
+<MdxIcon name="github" />
 
   </ResourceCard>
 </Column>
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
-    color="dark"
     subTitle="Carbon Angular components"
     href="https://github.com/IBM/carbon-components-angular"
     >
 
-<MdxIcon name="github" color="inverse" />
+<MdxIcon name="github" />
 
   </ResourceCard>
 </Column>
 <Column colLg={4} colMd={4}  noGutterSm>
   <ResourceCard
-    color="dark"
     subTitle="Carbon Vanilla components"
     href="https://github.com/carbon-design-system/carbon/tree/main/packages/components"
     >
 
-<MdxIcon name="github" color="inverse" />
+<MdxIcon name="github" />
 
   </ResourceCard>
 </Column>
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
-    color="dark"
     subTitle="Carbon Vue components"
     href="https://github.com/carbon-design-system/carbon-components-vue"
     >
 
-<MdxIcon name="github" color="inverse" />
+<MdxIcon name="github" />
 
   </ResourceCard>
 </Column>
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
-    color="dark"
     subTitle="Carbon Svelte components"
     href="https://github.com/IBM/carbon-components-svelte"
     >
-    <MdxIcon name="github" color="inverse" />
+    <MdxIcon name="github" />
   </ResourceCard>
 </Column>
 
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
-    color="dark"
     subTitle="Carbon Web Components"
     href="https://github.com/carbon-design-system/carbon-web-components"
     >
-    <MdxIcon name="github" color="inverse" />
+    <MdxIcon name="github" />
   </ResourceCard>
 </Column>
 </Row>
 
 ### Latest news and articles
 
-<MediumPosts postLimit={3} />
+<MediumPosts postLimit={3} cardProps={{ color: 'light' }} />
