updates to include rich text info
updated copy and images to include rich text in actionable notifications

--- a/src/pages/components/notification/usage.mdx
+++ b/src/pages/components/notification/usage.mdx
@@ -132,13 +132,12 @@ although some product teams also support banners and notification centers.
 </Row>
 
 1. **Icon:** Informs users of the kind of notification at a glance.
-2. **Message:** Provides additional detail and actionable steps for the user to
-   take.
+2. **Title:** Gives users a quick overview of the notification.
 3. **Action (actionable only):** Ghost or tertiary button that allows users to
    address the notification or navigates them to a page with further details.
 4. **Close button (optional):** Closes the notification.
-5. **Title (optional for inline and toast):** Gives users a quick overview of
-   the notification.
+5. **Message:** Provides additional detail and actionable steps for the user to
+   take.
 6. **Timestamp (optional for toast):** Shows the time the toast notification was
    sent.
 
@@ -150,14 +149,15 @@ apprised of the situation, and know what to do next.
 
 ### Main elements
 
-#### Title (inline and toast only)
+#### Title
 
 - The title should be short and descriptive, explaining the most important piece
   of information.
 - When possible, communicate the main message using just the title.
 - Use a period only if the title is a full sentence.
-- When using rich text, such a title, a screen reader will read aloud the entire
-  message as one sentence. Be mindful of how the message will be conveyed
+- When using rich text, such as in a title, a screen reader will read aloud the
+  entire message as one sentence. Since the message will be read as one string,
+  make sure that any text styling does not convey meaning.
 
 #### Body content
 
@@ -311,12 +311,6 @@ notification. Consider using a notification center where a user can revisit and
 act on past notifications.
 
 ### Formatting
-
-#### Content
-
-Actionable notifications do not allow for rich text like titles and captions.
-Keep content concise and clearly indicate the action the user can take. Limit
-action labels to two words or less.
 
 #### Inline
 
