add behavior section
added in behavior section

--- a/src/pages/components/notification/usage.mdx
+++ b/src/pages/components/notification/usage.mdx
@@ -24,6 +24,7 @@ actionable notifications.
 <AnchorLink>Inline notifications</AnchorLink>
 <AnchorLink>Toast notifications</AnchorLink>
 <AnchorLink>Actionable notifications</AnchorLink>
+<AnchorLink>Behaviors</AnchorLink>
 <AnchorLink>Modifiers</AnchorLink>
 <AnchorLink>Related</AnchorLink>
 <AnchorLink>Feedback</AnchorLink>
@@ -351,6 +352,32 @@ remain on screen until the user dismisses it. With the notification remaining
 open, the user has enough time to interact with the button without the toast
 closing too soon. Refer to [toast notifications](#toast-notifications) for
 further information.
+
+## Behaviors
+
+### Interactions
+
+#### Mouse
+
+Notifications are system generated. A user can close a dismissible notification
+by clicking the close `x`
+
+#### Keyboard
+
+For actionable notifications, the action gets focus first. Use `Tab` to move
+between action and the close `x`. To close notifications, press `Enter`
+or `Space` while the close `x` has focus or use the `Esc` key.
+
+#### Screen readers
+
+VoiceOver: To close notifications, press `Enter` or `Space` while the close `x`
+has focus or use the `Esc` key.
+
+JAWS: To close notifications, press `Enter` or `Space` while the close `x` has
+focus or use the `Esc` key.
+
+NVDA: To close notifications, press `Enter` or `Space` while the close `x` has
+focus or use the `Esc` key.
 
 ## Modifiers
 
