docs(Tooltip): add style module and update code/usage

--- a/src/pages/components/tooltip/code.mdx
+++ b/src/pages/components/tooltip/code.mdx
@@ -8,6 +8,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 import { Filter } from '@carbon/react/icons';
 import { Information } from '@carbon/react/icons';
+import { tooltip } from '../../styles/Tooltip.module.scss';
 
 <PageDescription>
 
@@ -99,7 +100,7 @@ documentation, see the Storybooks for each framework below.
       tabIndex={0}
       triggerText="Tooltip label"
     >
-      <button className="tooltip-trigger" type="button">
+      <button className={tooltip} type="button">
         <Information />
       </button>
     </Tooltip>
