--- a/src/pages/components/tooltip/usage.mdx
+++ b/src/pages/components/tooltip/usage.mdx
@@ -6,6 +6,8 @@ description:
 tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 ---
 
+import { tooltip } from '../../styles/Tooltip.module.scss';
+
 <PageDescription>
 
 Tooltips display additional information upon hover or focus. The information
@@ -184,7 +186,7 @@ import { Information } from '@carbon/react/icons';
       tabIndex={0}
       triggerText="Tooltip label"
     >
-      <button className="tooltip-trigger" type="button">
+      <button className={tooltip} type="button">
         <Information />
       </button>
     </Tooltip>
