--- a/src/pages/components/tabs/usage.mdx
+++ b/src/pages/components/tabs/usage.mdx
@@ -145,7 +145,7 @@ are always at least two tabs and one is selected by default. Icons are optional.
 
 </Column>
 </Row>
-<Caption>Note: The close icon to the left of the tab is an example of a pattern. It is not currently implemented in the component.</Caption>
+<Caption>Note: The close icon button pattern is not a configurable prop, it is instead enabled through the composable component API. This requires additional styling and configuration.</Caption>
 
 <Row>
 <Column colSm={2} colMd={4} colLg={4}>
