--- a/src/pages/components/tabs/usage.mdx
+++ b/src/pages/components/tabs/usage.mdx
@@ -177,7 +177,7 @@ B. Indicator <br /> C. Icon
 
 </Column>
 </Row>
-<Caption>Note: The icon to the left of the tab  and the secondary label is an example of a pattern. It is not currently implemented in the component.</Caption>
+<Caption>Note: The optional secondary label and icon patterns are not configurable props, but are instead enabled through the composable component API. This requires additional styling and configuration.</Caption>
 
 <Row>
 <Column colSm={2} colMd={4} colLg={4}>
