--- a/src/pages/components/tabs/usage.mdx
+++ b/src/pages/components/tabs/usage.mdx
@@ -395,10 +395,10 @@ label.
 </Column>
 </Row>
 
-<Caption>
+<InlineNotification>
   Note: Tabs with an icon is an example of a pattern. It is not currently
   implemented by default in the component.
-</Caption>
+</InlineNotification>
 
 ### Icon-only tabs
 
