docs(website): update verbage around composable patterns

--- a/src/pages/components/tabs/usage.mdx
+++ b/src/pages/components/tabs/usage.mdx
@@ -397,7 +397,8 @@ label.
 
 <InlineNotification>
   Note: Tabs with an icon is an example of a pattern. It is not currently
-  implemented by default in the component.
+  implemented by default in the component, it is instead enabled through the
+  composable component API. This requires additional styling and configuration.
 </InlineNotification>
 
 ### Icon-only tabs
