fixed anchor links and other updates

--- a/src/pages/migrating/guide/design.mdx
+++ b/src/pages/migrating/guide/design.mdx
@@ -18,9 +18,9 @@ theming, size naming, and new components.
 <AnchorLinks>
   <AnchorLink>Design kit</AnchorLink>
   <AnchorLink>Components</AnchorLink>
-  <AnchorLink>Sizing</AnchorLink>
-  <AnchorLink>Type tokens</AnchorLink>
-  <AnchorLink>Color tokens</AnchorLink>
+  <AnchorLink to="#sizing-breaking">Sizing</AnchorLink>
+  <AnchorLink to="#type-tokens-breaking">Type tokens</AnchorLink>
+  <AnchorLink to="#color-tokens-breaking">Color tokens</AnchorLink>
   <AnchorLink>Theming</AnchorLink>
 </AnchorLinks>
 
@@ -163,8 +163,8 @@ the pixel/rem value that it is paired with.
 The two v10 type sets—Productive and Expressive—have been blended together to
 work as a unified collection in v11. As a result of this convergence, type
 tokens name have been renamed to better define their relationship to one another
-and reflect its styling. For more information on the evolution of productive and
-express, see the [Typography page](/guidelines/typography/styling-strategies).
+and reflect its styling. For more information, see the
+[Typography page](/guidelines/typography/styling-strategies).
 
 ### Compact styles
 
@@ -227,8 +227,10 @@ Previously, in v10 many color tokens had numeral endings, now in v11 only
 layering tokens will have this distinction. All other tokens have been given an
 adjective descriptor in place of the number ending to help users better
 understand how a token should be used. The new naming convention is as follows:
-
 `[element] - [role] - [order] - [state]`
+
+For more information, see Carbon's [color overview](/guidelines/color/overview/)
+guidance.
 
 <Row>
 <Column colLg={12}>
@@ -251,11 +253,8 @@ developer concern. **In Sketch, and other design tools, designer will only use
 the layering tokens to design.** The layering tokens replace what were the `ui`
 color tokens in v10 and are used in a similar way.
 
-See Carbon's
-[color overview](https://v11.carbondesignsystem.com/guidelines/color/overview/)
-guidance and
-[migrating color tokens](https://github.com/carbon-design-system/carbon/blob/main/docs/migration/11.x-color.md)
-for more information.
+For more information, see Carbon's
+[color implementation](/guidelines/color/implementation) guidance.
 
 <Row>
 <Column colLg={12}>
