--- a/src/pages/migrating/guide/design.mdx
+++ b/src/pages/migrating/guide/design.mdx
@@ -163,8 +163,8 @@ the pixel/rem value that it is paired with.
 The two v10 type sets—Productive and Expressive—have been blended together to
 work as a unified collection in v11. As a result of this convergence, type token
 names have been renamed to better define their relationship to one another and
-reflect its styling. For more information on the evolution of productive and
-express, see the [Typography page](/guidelines/typography/styling-strategies).
+reflect its styling. For more informatio, see the
+[Typography](/guidelines/typography/styling-strategies) guidance.
 
 ### Compact styles
 
