fix(docs): remove nocoffee plugin

--- a/src/pages/guidelines/accessibility/overview.mdx
+++ b/src/pages/guidelines/accessibility/overview.mdx
@@ -87,9 +87,6 @@ to severe. It affects approximately 4% of the world’s population.
   [keyboard guidelines](https://www.nngroup.com/articles/keyboard-accessibility/)
   and test with a screen reader to ensure the page is read to the user in a
   logical order.
-- To gain a better understanding of the various low vision disabilities, use the
-  [NoCoffee](https://chrome.google.com/webstore/detail/nocoffee/jjeeggmbnhckmgdhmgdckeigabjfbddl)
-  Chrome plugin to preview websites.
 
 #### How this applies to everyone
 
@@ -135,11 +132,8 @@ to severe. It affects about 4% of the world’s population.
 
 #### Designing for low vision
 
-To get an understanding of the various low vision disabilities, we recommend
-using the
-[NoCoffee](https://chrome.google.com/webstore/detail/nocoffee/jjeeggmbnhckmgdhmgdckeigabjfbddl)
-Chrome plugin to preview websites. Low vision users may be using a screen reader
-to preview your website or experience, so be sure to follow
+Low vision users may be using a screen reader to preview your website or
+experience, so be sure to follow
 [keyboard guidelines](/guidelines/accessibility/keyboard) to ensure the page is
 read to the user in a logical order.
 
@@ -263,14 +257,6 @@ Functional cognitive disabilities can result in difficulties with:
      >
 
 ![color contrast icon](images/color-contrast-icon.png)
-
-</ResourceCard>
-</Column>
-<Column colMd={4} colLg={4} noGutterSm>
-<ResourceCard
-    subTitle="NoCoffee vision simulator"
-    href="https://chrome.google.com/webstore/detail/nocoffee/jjeeggmbnhckmgdhmgdckeigabjfbddl"
-     >
 
 </ResourceCard>
 </Column>
