consistent more info sentences

--- a/src/pages/migrating/guide/design.mdx
+++ b/src/pages/migrating/guide/design.mdx
@@ -109,7 +109,7 @@ visibility of a popover. This popover may contain a variety of information, from
 descriptive text to interactive elements. Further guidance on the toggletip
 component is coming soon.
 
-See Carbon's [Toggletip](/components/toggletip/usage/) usage guidance for more
+See Carbon's [toggletip](/components/toggletip/usage/) usage guidance for more
 information.
 
 ### Tabs <Tag type="cyan">Breaking</Tag>
@@ -163,8 +163,10 @@ the pixel/rem value that it is paired with.
 The two v10 type sets—Productive and Expressive—have been blended together to
 work as a unified collection in v11. As a result of this convergence, type token
 names have been renamed to better define their relationship to one another and
-reflect its styling. For more informatio, see the
-[Typography](/guidelines/typography/styling-strategies) guidance.
+reflect its styling.
+
+See Carbon's [typography](/guidelines/typography/styling-strategies) guidance
+for more information.
 
 ### Compact styles
 
@@ -229,8 +231,8 @@ adjective descriptor in place of the number ending to help users better
 understand how a token should be used. The new naming convention is as follows:
 `[element] - [role] - [order] - [state]`
 
-For more information, see Carbon's [color overview](/guidelines/color/overview/)
-guidance.
+See Carbon's [color overview](/guidelines/color/overview/) guidance for more
+information.
 
 <Row>
 <Column colLg={12}>
@@ -253,8 +255,8 @@ developer concern. **In Sketch, and other design tools, designer will only use
 the layering tokens to design.** The layering tokens replace what were the `ui`
 color tokens in v10 and are used in a similar way.
 
-For more information, see Carbon's
-[color implementation](/guidelines/color/implementation) guidance.
+See Carbon's [color implementation](/guidelines/color/implementation) guidance
+for more information.
 
 <Row>
 <Column colLg={12}>
