v11(migration): design docs updates (#2807)
* v11(migration): design docs updates

* Update design.mdx

* Update design.mdx

* update type

* test notification

* Update usage.mdx

* Update usage.mdx

* Update src/pages/migrating/guide/design.mdx

Co-authored-by: Lauren Rice <43969356+laurenmrice@users.noreply.github.com>

* fixed anchor links and other updates

* Update design.mdx

* consistent more info sentences

Co-authored-by: Lauren Rice <43969356+laurenmrice@users.noreply.github.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/src/pages/components/tooltip/usage.mdx
+++ b/src/pages/components/tooltip/usage.mdx
@@ -162,8 +162,7 @@ import { Filter16 } from '@carbon/icons-react';
       label: 'Definition tooltip',
     },
   ]}
-  scope={{ Filter16 }}
->
+  scope={{ Filter16 }}>
   <ComponentVariant
     id="tooltip"
     links={{
@@ -175,8 +174,7 @@ import { Filter16 } from '@carbon/icons-react';
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tooltip',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--default',
-    }}
-  >{`
+    }}>{`
     <Tooltip
       direction="bottom"
       tabIndex={0}
@@ -207,8 +205,7 @@ import { Filter16 } from '@carbon/icons-react';
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tooltip',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--icon',
-    }}
-  >{`
+    }}>{`
     <TooltipIcon
       tooltipText="Filter"
     >
@@ -229,8 +226,7 @@ import { Filter16 } from '@carbon/icons-react';
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tooltip',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--definition',
-    }}
-  >{`
+    }}>{`
     <TooltipDefinition
       tooltipText="Brief description of the dotted, underlined word above."
     >
