--- a/src/pages/designing/kits/adobe-xd.mdx
+++ b/src/pages/designing/kits/adobe-xd.mdx
@@ -157,4 +157,4 @@ old one. Releases will be posted to the
 ## Feedback
 
 Help us improve this component by providing feedback, asking questions, and
-leaving any other comments on GitHub.
+leaving any other comments on GitHub. Testing changes
